[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Icons and things/glow/glow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/NPCs/Josiah_Wedgewood_Sprite-01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Backgrounds/wedgwood_house_map_floor.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons and things/glow/glow.gd" type="Script" id=5]
[ext_resource path="res://Level2.gd" type="Script" id=6]
[ext_resource path="res://Player/Pat_Sprite_walk2 copy.png" type="Texture" id=7]
[ext_resource path="res://Player/Pat_Sprite_walk_x.png" type="Texture" id=8]
[ext_resource path="res://Player/Pat_Sprite_walk_x2png.png" type="Texture" id=9]
[ext_resource path="res://Player/Pat_Sprite_walk1 copy.png" type="Texture" id=10]
[ext_resource path="res://Player2.gd" type="Script" id=11]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 233.226, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.8068, 15.1196 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 52.2208
height = 44.2891

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 29.4483
height = 26.7986

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 33.1181
height = 53.3269

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="wedgwood_house_map_floor" type="Sprite" parent="."]
position = Vector2( 512.545, 297.642 )
scale = Vector2( 2.20095, 2.42462 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="wedgwood_house_map_floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( 0.389908, -112.609 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( 0.389908, 113.814 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( -125.544, -88.0076 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( 125.965, -88.0076 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( -125.122, 90.2901 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="wedgwood_house_map_floor/StaticBody2D"]
position = Vector2( 125.965, 90.2901 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 90.8228, 306.545 )
rotation = 1.5708
scale = Vector2( 0.23, 0.23 )

[node name="box2" parent="." instance=ExtResource( 1 )]
position = Vector2( 354.433, 503.429 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 5 )

[node name="box1" parent="." instance=ExtResource( 1 )]
position = Vector2( 438.041, 90.3382 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 5 )

[node name="Items_Level2" type="Panel" parent="box1"]
visible = false
margin_left = 257.0
margin_top = 104.0
margin_right = 2648.0
margin_bottom = 1259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Josiah" type="Area2D" parent="."]
visible = false

[node name="Josiah_Wedgewood_Sprite-01" type="Sprite" parent="Josiah"]
position = Vector2( 930.198, 317.859 )
rotation = -1.5708
scale = Vector2( 0.340422, 0.40203 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Josiah"]
position = Vector2( 940.464, 315.703 )
shape = SubResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 15.0
margin_right = 150.0
margin_bottom = 55.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player2"]
position = Vector2( 200, 300 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 4 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 200.818, 299.639 )
shape = SubResource( 5 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D"]
position = Vector2( 950, 315 )
rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 958.99, 312.824 )
shape = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="RigidBody2D"]
__meta__ = {
"_edit_group_": true
}
[connection signal="body_entered" from="box2" to="box2" method="_on_box2_body_entered"]
[connection signal="body_entered" from="box1" to="box1" method="_on_box1_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_exited" from="Player2" to="Player2" method="_on_Player2_body_exited"]
